apps/cli/test/expected/parse-errors.out.txt
{
	"fixture": "parse-errors",
	"command": "siren list"
}
---
valid
---
error: unexpected token 'this'; expected 'task' or 'milestone'
 --> siren/broken.siren:1:1
  |
1 | this is not valid siren syntax!!!
  | ^^^^
note: skipping siren/broken.siren due to syntax errors
